Issue #46: added captureStay method
