# service/src/main/java/com/myhome/controllers/HouseController.java
@@ -18,128 +18,86 @@ package com.myhome.controllers;
 
 
 import com.myhome.controllers.dto.HouseHistoryDto;
-
-import com.myhome.controllers.dto.HouseHistoryDto;
 import com.myhome.controllers.dto.mapper.HouseHistoryMapper;
+import com.myhome.api.HousesApi;
 import com.myhome.controllers.dto.mapper.HouseMemberMapper;
 import com.myhome.controllers.mapper.HouseApiMapper;
-import com.myhome.controllers.request.AddHouseMemberRequest;
-import com.myhome.controllers.response.AddHouseMemberResponse;
-import com.myhome.controllers.response.GetHouseDetailsResponse;
-import com.myhome.controllers.response.ListHouseMembersResponse;
 import com.myhome.domain.CommunityHouse;
-import com.myhome.domain.HouseHistory;
 import com.myhome.domain.HouseMember;
+import com.myhome.model.AddHouseMemberRequest;
+import com.myhome.model.AddHouseMemberResponse;
+import com.myhome.model.CaptureStayRequest;
+import com.myhome.model.CaptureStayResponse;
+import com.myhome.model.GetHouseDetailsResponse;
+import com.myhome.model.GetHouseDetailsResponseCommunityHouse;
+import com.myhome.model.ListHouseMembersResponse;
 import com.myhome.services.HouseService;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.web.PageableDefault;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
 @Slf4j
-public class HouseController {
+public class HouseController implements HousesApi {
   private final HouseMemberMapper houseMemberMapper;
   private final HouseService houseService;
   private final HouseApiMapper houseApiMapper;
-  private final HouseHistoryMapper houseHistoryMapper;
 
-  @Operation(description = "List all houses of the community given a community id")
-  @GetMapping(
-      path = "/houses",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
+  @Override
   public ResponseEntity<GetHouseDetailsResponse> listAllHouses(
       @PageableDefault(size = 200) Pageable pageable) {
     log.trace("Received request to list all houses");
 
     Set<CommunityHouse> houseDetails =
         houseService.listAllHouses(pageable);
-    Set<GetHouseDetailsResponse.CommunityHouse> getHouseDetailsResponseSet =
+    Set<GetHouseDetailsResponseCommunityHouse> getHouseDetailsResponseSet =
         houseApiMapper.communityHouseSetToRestApiResponseCommunityHouseSet(houseDetails);
 
     GetHouseDetailsResponse response = new GetHouseDetailsResponse();
+
     response.setHouses(getHouseDetailsResponseSet);
 
     return ResponseEntity.status(HttpStatus.OK).body(response);
   }
 
-  @Operation(description = "List all houses of the community given a community id",
-      responses = {
-          @ApiResponse(responseCode = "200", description = "if house present"),
-          @ApiResponse(responseCode = "404", description = "if params are invalid")
-      })
-  @GetMapping(
-      path = "/houses/{houseId}",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
-  public ResponseEntity<GetHouseDetailsResponse> getHouseDetails(@PathVariable String houseId) {
+  @Override
+  public ResponseEntity<GetHouseDetailsResponse> getHouseDetails(String houseId) {
     log.trace("Received request to get details of a house with id[{}]", houseId);
     return houseService.getHouseDetailsById(houseId)
         .map(houseApiMapper::communityHouseToRestApiResponseCommunityHouse)
         .map(Collections::singleton)
-        .map(GetHouseDetailsResponse::new)
+        .map(getHouseDetailsResponseCommunityHouses -> new GetHouseDetailsResponse().houses(getHouseDetailsResponseCommunityHouses))
         .map(ResponseEntity::ok)
         .orElse(ResponseEntity.notFound().build());
   }
 
-  @Operation(description = "List all members of the house given a house id",
-      responses = {
-          @ApiResponse(responseCode = "200", description = "if house present"),
-          @ApiResponse(responseCode = "404", description = "if params are invalid")
-      })
-  @GetMapping(
-      path = "/houses/{houseId}/members",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
+  @Override
   public ResponseEntity<ListHouseMembersResponse> listAllMembersOfHouse(
-      @PathVariable String houseId,
+      String houseId,
       @PageableDefault(size = 200) Pageable pageable) {
     log.trace("Received request to list all members of the house with id[{}]", houseId);
 
     return houseService.getHouseMembersById(houseId, pageable)
         .map(HashSet::new)
         .map(houseMemberMapper::houseMemberSetToRestApiResponseHouseMemberSet)
-        .map(ListHouseMembersResponse::new)
+        .map(houseMembers -> new ListHouseMembersResponse().members(houseMembers))
         .map(ResponseEntity::ok)
         .orElse(ResponseEntity.notFound().build());
   }
 
-  @Operation(
-      description = "Add new members to the house given a house id. Responds with member id which were added",
-      responses = {
-          @ApiResponse(responseCode = "201", description = "If members were added to house"),
-          @ApiResponse(responseCode = "404", description = "If parameters are invalid")
-      })
-  @PostMapping(
-      path = "/houses/{houseId}/members",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE},
-      consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
+  @Override
   public ResponseEntity<AddHouseMemberResponse> addHouseMembers(
-      @PathVariable String houseId, @Valid @RequestBody AddHouseMemberRequest request) {
+      @PathVariable String houseId, @Valid AddHouseMemberRequest request) {
 
     log.trace("Received request to add member to the house with id[{}]", houseId);
     Set<HouseMember> members =
@@ -156,15 +114,13 @@ public class HouseController {
     }
   }
 
-  @Operation(description = "Deletion of member associated with a house",
-      responses = {
-          @ApiResponse(responseCode = "204", description = "If house member was removed from house"),
-          @ApiResponse(responseCode = "404", description = "If parameters are invalid")})
-  @DeleteMapping(
-      path = "/houses/{houseId}/members/{memberId}"
-  )
-  public ResponseEntity<Void> deleteHouseMember(@PathVariable String houseId,
-      @PathVariable String memberId) {
+  @Override public ResponseEntity<CaptureStayResponse> captureStay(
+      @Valid CaptureStayRequest captureStayRequest) {
+    return null;
+  }
+
+  @Override
+  public ResponseEntity<Void> deleteHouseMember(String houseId, String memberId) {
     log.trace("Received request to delete a member from house with house id[{}] and member id[{}]",
         houseId, memberId);
     boolean isMemberDeleted = houseService.deleteMemberFromHouse(houseId, memberId);
@@ -174,45 +130,6 @@ public class HouseController {
       return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
   }
-  @Operation(
 
-      description = "Add the duration of stay to house history.",
-      responses = {
-          @ApiResponse(responseCode = "201", description = "If duration of stay was added to house history"),//
-          @ApiResponse(responseCode = "404", description = "If parameters are invalid")
-      })
-  @PostMapping(
-      path = "/houses/member/captureStay",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE},
-      consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
-  public ResponseEntity<HouseHistory> captureStay(@Valid @RequestBody HouseHistoryDto houseHistoryDto){
-    log.trace("Received request to post date interval for house Id[{}] and memberId [{}] ",
-        houseHistoryDto.getHouseId(), houseHistoryDto.getMemberId());
-    HouseHistory houseHistory = houseService.captureStay(houseHistoryDto);
-    return (ResponseEntity<HouseHistory>) (houseHistory != null
-            ? ResponseEntity.status(HttpStatus.CREATED).body(houseHistory)
-            : ResponseEntity.status(HttpStatus.BAD_REQUEST).body(houseHistory));
-  }
-
-  @Operation(description = "List of House history",
-      responses = {
-          @ApiResponse(responseCode = "201", description = "If house history is present"),//
-          @ApiResponse(responseCode = "404", description = "If parameters are invalid")
-      })
-
-  @GetMapping(
-      path = "/house/history/{houseId}",
-      produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE}
-  )
-  public ResponseEntity<List<HouseHistoryDto>> getHouseHistory(@PathVariable String houseId,@RequestParam(required = false)
-      String memberId){
-    if (!houseService.getHouseDetailsById(houseId).isPresent()) {
-      return ResponseEntity.status(HttpStatus.NOT_FOUND).body(new ArrayList<HouseHistoryDto>());
-    }
-    List<HouseHistory> houseHistoryList = houseService.getHouseHistory(memberId,houseId).get();
-    List<HouseHistoryDto> houseHistoryDtoList = houseHistoryList.stream()
-        .map(houseHistoryMapper::HouseHistoryToHouseHistoryDto).collect(Collectors.toList());
-    return ResponseEntity.status(HttpStatus.OK).body(houseHistoryDtoList);
-  }
 }
+
